--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>test</title>
 </head>
 <body>
-    test 1 on the laptop
+    <h1>This is from the laptop</h1>
+    <footer>successfully updated from laptop</footer>
     
 </body>
 </html>
