folder creations and place holder files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>test</title>
 </head>
 <body>
-    <h1>This is from the laptop</h1>
+    <h1>William Cameron</h1>
     <footer>successfully updated from laptop</footer>
     
 </body>
