html struction complete

--- a/index.html
+++ b/index.html
@@ -4,11 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <meta name="author" content="William Cameron">
+    <meta name="description" content="This is the portal page for assignments related to wdd 230">
+    
+    <title>William Cameron's Home Page</title>
 </head>
 <body>
-    <h1>William Cameron</h1>
-    <footer>successfully updated from laptop</footer>
-    
+    <header>
+        <h1 id="nameTitle">home page</h1>
+        <img id = "headerPhoto" src="images/selfie.jpg" alt="This is a picture of me on my wedding day">
+    </header>
+
+    <main>
+        <h1>WDD 230: Assignment Portal</h1>
+        <ul>
+            <li> Lesson 02: <a href="">Title</a></li>
+            <li> Lesson 03: <a href="">Title</a></li>
+            <li> Lesson 04: <a href="">Title</a></li>
+            <li> Lesson 05: <a href="">Title</a></li>
+            <li> Lesson 06: <a href="">Title</a></li>
+            <li> Lesson 07: <a href="">Title</a></li>
+            <li> Lesson 08: <a href="">Title</a></li>
+            <li> Lesson 09: <a href="">Title</a></li>
+            <li> Lesson 10: <a href="">Title</a></li>
+            <li> Lesson 11: <a href="">Title</a></li>
+        </ul>
+
+    </main>
+
+    <footer>
+        <p id ="footerDate"></p>
+        <p id ="footerName"></p>
+        <P id ="footerLocation"></P>
+        <p id ="lastUpdated"></p>
+    </footer>
+    <script src="scripts/homePageScript.js"></script>
 </body>
 </html>
