normalize css tag added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="William Cameron">
     <meta name="description" content="This is the portal page for assignments related to wdd 230">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/homePageCss.css">
     <title>William Cameron's Home Page</title>
 </head>
