updated css reference to small

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/homePageCss.css">
+    <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
     <title>William Cameron's Home Page</title>
 </head>
