--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="portalDiv">
             <h2>WDD 230: Assignment Portal</h2>
             <ul>
-                <li> Lesson 02: <a href="">Title</a></li>
+                <li> Lesson 02: <a href="lesson2/design-principles.html">3 Design Principles</a></li>
                 <li> Lesson 03: <a href="">Title</a></li>
                 <li> Lesson 04: <a href="">Title</a></li>
                 <li> Lesson 05: <a href="">Title</a></li>
