html structure updates

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -25,7 +25,7 @@
         <img id="logo" src="images/hpvLogo.png">
         <h1>Happy Valley Chamber of Commerce</h1>
         
-        <h3 id="domain">Domain: thinkhvc.com</h3>
+        <h2 id="domain">Domain: thinkhvc.com</h2>
 
     </header>
     <nav>
@@ -38,8 +38,8 @@
     </nav>
 
     <main>
-        <a>Our Purpose</a>
-        <p> P-o-p holding in to down.  slowin it down, folding it down, rolling it now, calling you now</p>
+        <h2>Our Purpose</h2>
+        <p>Our purpose here is at the Happy Valley Chamber of Commerce is to foster partnerships in supporting, improving and expanding our Happy community.  Our mission is achieved by solid buisness intergration,, community engagement and outreach.  Join us, and together we will make Happy Valley an even more special place to be.</p>
 
     </main>
     
