--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -23,7 +23,7 @@
 
 <body>
     <header>
-        <img id="logo" src="images/hpvLogo.png">
+        <img id="logo" src="images/hpvLogo.png" alt="logo for the chamber">
         <h1>Happy Valley Chamber of Commerce</h1>
 
     </header>
