--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -23,7 +23,7 @@
 
 <body>
     <header>
-        <img id="logo" src="images/hpvLogo.png">
+        <img id="logo" src="images/hpvLogo.png" alt="logo for the chamber">
         <h1>Happy Valley Chamber of Commerce</h1>
 
     </header>
@@ -49,42 +49,42 @@
             <div id="typoHeadingsOne">
                 <p id="component">Heading 1</p>
                 <p id="name">Arvo</p>
-                <p id="headingSample">Example</p>
+                <p class="headingSample">Example</p>
 
             </div>
 
             <div id="typoHeadingsTwo">
                 <p>Heading 2</p>
                 <p>Arvo</p>
-                <p id="headingSample">Example</p>
+                <p class="headingSample">Example</p>
 
             </div>
 
             <div id="typoHeadingsThree">
                 <p>Heading 3</p>
                 <p>Arvo</p>
-                <p id="headingSample">Example</p>
+                <p class="headingSample">Example</p>
 
             </div>
 
             <div id="typoParagraph">
                 <p>Paragraph</p>
                 <p>Fira Sans</p>
-                <P id="nonHeadingSample">Example</P>
+                <P class="nonHeadingSample">Example</P>
 
             </div>
 
             <div id="typoNav">
                 <p>Navigation Links</p>
                 <p>Fira Sans</p>
-                <P id="nonHeadingSample">Example</P>
+                <P class="nonHeadingSample">Example</P>
 
             </div>
 
             <div id="typoList">
                 <p>List Items</p>
                 <p>Fira Sans</p>
-                <P id="nonHeadingSample">Example</P>
+                <P class="nonHeadingSample">Example</P>
 
             </div>
             
