--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -33,7 +33,7 @@
             <a href="target-audience.html">Audience</a>
             <a href="typography.html">Typography</a>
             <a href="color-scheme.html">Colors</a>
-        </ul>
+        
     </nav>
 
     <main>
@@ -41,42 +41,42 @@
         <div id="sampleContainer">
 
             <div id="colorSampleHeadings">
-                <p id="name">Name</p>
-                <p id="hex">Hex</p>
-                <p id="rgb">RGB</p>
-                <p id="sample">Sample</p>
+                <p>Name</p>
+                <p>Hex</p>
+                <p>RGB</p>
+                <p>Sample</p>
             </div>
 
             <div id="blue">
-                <p id="bname">Prussian Blue</p>
-                <p id="bhex">#003049</p>
+                <p>Prussian Blue</p>
+                <p>#003049</p>
                 <p>0,48,73</p>
                 <p>Example</p>
             </div>
 
             <div id="red">
-                <p id="name">Maximum Red</p>
+                <p>Maximum Red</p>
                 <p>#D62828</p>
                 <p>214,40,40</p>
                 <p>Example</p>
             </div>
 
             <div id="orange">
-                <p id="name">Orange</p>
+                <p>Orange</p>
                 <p>#F77F00</p>
                 <p>247, 127, 0</p>
                 <P>Example</P>
             </div>
 
             <div id="yellow">
-                <p id="name">Maximum Yellow Red</p>
+                <p>Maximum Yellow Red</p>
                 <p>#FCBF49</p>
                 <p>252,191,73</p>
                 <P>Example</P>
             </div>
 
             <div id="lemon">
-                <p id="name">Lemon Meringue</p>
+                <p>Lemon Meringue</p>
                 <p>#EAE2B7</p>
                 <p>234,226,183</p>
                 <P>Example</P>
