--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <h2>WDD 230: Assignment Portal</h2>
             <ul>
                 <li> Lesson 02: <a href="lesson2/design-principles.html">3 Design Principles</a></li>
-                <li> Lesson 03: <a href="lesson3/index.html">Chamber Of Commerce Page</a></li>
-                <li> Lesson 04: <a href="">Title</a></li>
+                <li> Lesson 03: <a href="lesson3/index.html">Chamber Of Commerce Site Plan Page</a></li>
+                <li> Lesson 04: <a href="chamber/index.html">Chamber of Commerce Project Page</a></li>
                 <li> Lesson 05: <a href="">Title</a></li>
                 <li> Lesson 06: <a href="">Title</a></li>
                 <li> Lesson 07: <a href="">Title</a></li>
