--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico">
     
     
     <title>Happy Valley Chamber of Commerce Home Page</title>
