week six lesson added but  named week six tutorial

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li> Lesson 04: <a href="chamber/index.html">Chamber of Commerce Project Page</a></li>
                 <li> Week 05 Presentation: <a href="mediaQueryFolder/mediaQ.html">Media Query Example Page</a></li>
                 <li> Lesson 05: <a href="bom/bom.html">DOM Manipulation</a></li>
-                <li> Lesson 06: <a href="">Title</a></li>
+                <li> Lesson 06: <a href="week6tutorial/index">Working with Responsive images</a></li>
                 <li> Lesson 07: <a href="">Title</a></li>
                 <li> Lesson 08: <a href="">Title</a></li>
                 <li> Lesson 09: <a href="">Title</a></li>
