lesson 7 link correction

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li> Week 05 Presentation: <a href="mediaQueryFolder/mediaQ.html">Media Query Example Page</a></li>
                 <li> Lesson 05: <a href="bom/bom.html">DOM Manipulation</a></li>
                 <li> Lesson 06: <a href="week6tutorial/index">Working with Responsive images</a></li>
-                <li> Lesson 07: <a href="lesson7/">Lazy Loading Example with IntersectionObserver </a></li>
+                <li> Lesson 07: <a href="lesson7/lazyload.html">Lazy Loading Example with IntersectionObserver </a></li>
                 <li> Lesson 08: <a href="">Title</a></li>
                 <li> Lesson 09: <a href="">Title</a></li>
                 <li> Lesson 10: <a href="">Title</a></li>
