--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -13,13 +13,19 @@
 <body>
     <h1>Lazy Loading Example</h1>
    
-    <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/cat/300/400">
+    <!-- <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/cat/300/400">
     <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/dog/300/400">
     <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/fish/300/400">
     <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/bird/300/400">
     <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/cat/300/400">
-    <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/dog/300/400">
-    <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/fish/300/400">
+    <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/dog/300/400"> -->
+
+    <img class ='blur' src="images/placeholder.jpg" data-src="images/art_placeholder_300x400.jpg">
+    <img class ='blur' src="images/placeholder.jpg" data-src="images/bakery_placeholder_300x400.jpg">
+    <img class ='blur' src="images/placeholder.jpg" data-src="images/city_placeholder_300x400.jpg">
+    <img class ='blur' src="images/placeholder.jpg" data-src="images/hotChoco_placeholder_300x400jpg.jpg">
+    <img class ='blur' src="images/placeholder.jpg" data-src="images/lama_placeholder_300x400.jpg">
+    <img class ='blur' src="images/placeholder.jpg" data-src="images/leaves_placeholder_300x400.jpg.">
     
    
     
