lazyload comments update

--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -13,12 +13,12 @@
 <body>
     <h1>Lazy Loading Example</h1>
    
-    <!-- <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/cat/300/400">
-    <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/dog/300/400">
-    <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/fish/300/400">
-    <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/bird/300/400">
-    <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/cat/300/400">
-    <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/dog/300/400"> -->
+    <!-- <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/cat/300/400" alt="place holder image">
+    <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/dog/300/400" alt="place holder image">
+    <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/fish/300/400" alt="place holder image">
+    <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/bird/300/400" alt="place holder image">
+    <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/cat/300/400" alt="place holder image">
+    <img class ='blur' src="images/placeholder.jpg" data-src="https:wildcard.codestuff.io/dog/300/400" alt="place holder image"> -->
 
     <img class ='blur' src="images/placeholder.jpg" data-src="images/art_placeholder_300x400.jpg" alt='A picture of a ceiling decorated with art and a statue'>
     <img class ='blur' src="images/placeholder.jpg" data-src="images/bakery_placeholder_300x400.jpg" alt="A picture of a window full of pasteries in a bakery window">
