corrections and updates to home page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -75,8 +75,8 @@
             <nav>
                 
                 <div id="primaryNav">
-                    <a href="#">Home</a>
-                    <a href="#">Discover</a>
+                    <a class="active" href="index.html">Home</a>
+                    <a href="discover.html">Discover</a>
                     <a href="#">Directory</a>
                     <a href="#">Join</a>
                     <a href="#">Contact</a>
@@ -202,8 +202,8 @@
                 <div class="spotTop">
                     <!-- <p id="spotOne">Spotlight 1</p> -->
                     <h2>Heart-A-Tac Gaming Lounge</h2>
-                    <!-- <picture>
-                        Below is the test for source.  -->
+                    <picture>
+                       <!-- Below is the test for source.  -->
                         <!-- <source media="(max-width: 1020px)" srcset="images/herovalleyOpt.jpg" alt="Credit: pixel2013 / 2471 on pixabay.com" alt="Picture of a tic tac toe board with hearts" title="https://pixabay.com/photos/tic-tac-toe-heart-game-chalk-love-1777859/">
                          -->
 
