--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li> Lesson 05: <a href="bom/bom.html">DOM Manipulation</a></li>
                 <li> Lesson 06: <a href="week6tutorial/start/index.html">Working with Responsive images</a></li>
                 <li> Lesson 07: <a href="lesson7/lazyload.html">Lazy Loading Example with IntersectionObserver </a></li>
-                <li> Lesson 08: <a href="">Title</a></li>
+                <li> Lesson 08: <a href="lesson8/tablebuild.html">HTML Table Build</a></li>
                 <li> Lesson 09: <a href="">Title</a></li>
                 <li> Lesson 10: <a href="">Title</a></li>
                 <li> Lesson 11: <a href="">Title</a></li>
