--- a/chamber/index.html
+++ b/chamber/index.html
@@ -78,7 +78,7 @@
                     <a class="active" href="index.html">Home</a>
                     <a href="discover.html">Discover</a>
                     <a href="#">Directory</a>
-                    <a href="#">Join</a>
+                    <a href="join.html">Join</a>
                     <a href="#">Contact</a>
 
                 </div>
