--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -78,7 +78,7 @@
                     <a href="index.html">Home</a>
                     <a class="active" href="#">Discover</a>
                     <a href="#">Directory</a>
-                    <a href="#">Join</a>
+                    <a href="join.html">Join</a>
                     <a href="#">Contact</a>
 
                 </div>
