--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -15,9 +15,9 @@
         <thead>
             <tr>
                 <th colspan="2">
-                    sales
+                    Sales
                 </th>
-            </tr>
+            </tr> 
         </thead>
         
         <tbody>
