Title added and css adjustments

--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <table>
+        <h1>HTML Table Build </h1>
         <thead>
             <tr>
                 <th colspan="2">
