--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -15,7 +15,7 @@
         <h1>HTML Table Build </h1>
         <thead>
             <tr>
-                <th colspan="2">
+                <th colspan="2" scope="col">
                     Sales
                 </th>
             </tr> 
@@ -23,27 +23,27 @@
         
         <tbody>
             <tr>
-                <th>Month</th>
-                <th>Amount</th>
+                <th scope="col">Month</th>
+                <th scope="col">Amount</th>
             </tr>
             <tr>
-                <td>July</td>
+                <td scope="row">July</td>
                 <td>3000</td>
             </tr>
             <tr>
-                <td>August</td>
+                <td scope="row">August</td>
                 <td>8000</td>
             </tr>
             <tr>
-                <td>September</td>
+                <td scope="row">September</td>
                 <td>4000</td>
             </tr>
             <tr>
-                <td>October</td>
+                <td scope="row">October</td>
                 <td>3000</td>
             </tr>
             <tr>
-                <td>November</td>
+                <td scope="row">November</td>
                 <td>2000</td>
             </tr>
             
