--- a/chamber/index.html
+++ b/chamber/index.html
@@ -123,7 +123,7 @@
     
 
 
-    <main>
+    <main class="homeMain">
         
         <div id="heroSection">
             <h2 id="welcome">Welcome to Happy Valley</h2>
