thank you link update

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -97,7 +97,7 @@
         <main id="joinPageMain">
             <h1>Chamber Membership Application</h1>
 
-           <form method="get" action="thanks.html" class="joinMain">
+           <form method="get" action="thankyou.html" class="joinMain">
                <!-- <h1>Chamber Membership Application</h1> -->
                <fieldset>
                    <legend>Applicant Information</legend>
