--- a/chamber/join.html
+++ b/chamber/join.html
@@ -104,14 +104,14 @@
                    <!-- <div>Personal Information</div> -->
                    <label class="top">First Name*<br><input type="text" name="fname" required></label>
                    <label class="top">Last Name*<br><input type="text" name="lname" required></label>
-                   <label class="top">Phone*<br><input type="tel" name="phone" required placeholder="1235551234"></label>
+                   <label class="top">Phone*<br><input type="tel" name="phone" required placeholder="1231231234"></label>
                    <label class="top">Email*<br><input type="email" name="email" placeholder="yourbusiness@gmail.com" required></label>
                </fieldset>
 
                <fieldset>
                    <legend>Business Information</legend>
                    <label class="bname">Business Name*<br><input type="text" name="bname" required placeholder="Business inc" ></label>
-                   <label class="bposition">Title/Position*<br><input type="text" pattern="[A-Za-Z//-]{7,}" name="bposition"   placeholder="Chief Executive Office" ></label>
+                   <label class="bposition">Title/Position*<br><input type="text" pattern="[A-Za-z -]{7,}" name="bposition"   placeholder="Chief Executive Office" ></label>
                    <!-- <label class="top">Business Description<input type="textarea" name="bdescription" placeholder="Give a brief description of your business"></label> -->
                    <label class="bdescription">Business Description<br><textarea id="textarea" name="bdescription"  placeholder="Give a brief description of your business" rows="5" cols="33"></textarea></label>
 
@@ -141,7 +141,7 @@
                </fieldset>
 
                <input type="submit" value="Send Application" class="submitBtn">
-               <input type="hidden" id="timeStamp">
+               <input type="hidden" id="timeStamp" value="1">
        
            </form>
 
