bronze button active by default

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -127,7 +127,7 @@
                    <legend>Membership Selection</legend>
                    
                    <label class="sbs"><input type="radio" name="membership" value="nonProfit"> Non-Profit Membership<span class="checkmark"></span></label>
-                   <label class="sbs"><input type="radio" name="membership"  value="bronze"> Bronze Membership<span class="checkmark"></span></label>
+                   <label class="sbs"><input type="radio" name="membership"  value="bronze" checked> Bronze Membership<span class="checkmark"></span></label>
                    <label class="sbs"><input type="radio" name="membership"  value="silver"> Silver Membership<span class="checkmark"></span></label>
                    <label class="sbs"><input type="radio" name="membership"  value="gold"> Gold Membership<span class="checkmark"></span></label>
                    <label class="sbs"><input type="radio" name="membership"  value="platinum"> Platinum Membership<span class="checkmark"></span></label>
