minor adjustments and obsolete comment removal

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -19,7 +19,7 @@
     <link rel="shortcut icon" href="favicon.ico">
     
     
-    <title>Happy Valley Chamber of Commerce Home Page</title>
+    <title>Happy Valley Chamber of Commerce Thank You Page</title>
 
 
 
