--- a/chamber/index.html
+++ b/chamber/index.html
@@ -77,7 +77,7 @@
                 <div id="primaryNav">
                     <a class="active" href="index.html">Home</a>
                     <a href="discover.html">Discover</a>
-                    <a href="#">Directory</a>
+                    <a href="directory.html">Directory</a>
                     <a href="join.html">Join</a>
                     <a href="#">Contact</a>
 
