directory link added

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -59,7 +59,7 @@
                 <div id="primaryNav">
                     <a href="index.html">Home</a>
                     <a href="discover.html">Discover</a>
-                    <a href="#">Directory</a>
+                    <a href="directory.html">Directory</a>
                     <a class="active" href="join.html">Join</a>
                     <a href="#">Contact</a>
 
