--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -77,7 +77,7 @@
                 <div id="primaryNav">
                     <a href="index.html">Home</a>
                     <a class="active" href="#">Discover</a>
-                    <a href="#">Directory</a>
+                    <a href="directory.html">Directory</a>
                     <a href="join.html">Join</a>
                     <a href="#">Contact</a>
 
