directory link added and active class removed

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -64,8 +64,8 @@
                 <div id="primaryNav">
                     <a href="index.html">Home</a>
                     <a href="discover.html">Discover</a>
-                    <a href="#">Directory</a>
-                    <a class="active" href="join.html">Join</a>
+                    <a href="directory.html">Directory</a>
+                    <a href="join.html">Join</a>
                     <a href="#">Contact</a>
 
                 </div>
