active class added to listSwitch

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -126,7 +126,7 @@
     <main id="directoryMain">
         <h2>Business Directory</h2>
         <div class="switches">
-            <button id="listSwitch">&#x2630;</button>
+            <button id="listSwitch" class="active">&#x2630;</button>
             <button id="gridSwitch">&#x2637;</button>
 
         </div>
