--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -132,7 +132,7 @@
         </div>
         
         <div id="directory" class="directoryList">
-            <section>
+            <!-- <section>
                 <img src="images/art_placeholder_300x400.jpg" alt='A picture of a ceiling decorated with art and a statue'>
                 <h3>Heart-A-Tac Gaming Lounge</h3>
                 <p>1000 N. 1000 E. Happy Valley, UT 84003</p>
@@ -211,7 +211,7 @@
                 <p>+1-111-222-3333</p>
                 <a>www.hatlounge.com</a>
                 <p class="member">Platinum Member</p>
-            </section>
+            </section> -->
 
 
 
