wireframe page link added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li> Lesson 02: <a href="lesson2/design-principles.html">3 Design Principles</a></li>
                 <li> Lesson 03: <a href="lesson3/index.html">Chamber Of Commerce Site Plan Page</a></li>
                 <li> Lesson 04: <a href="chamber/index.html">Chamber of Commerce Project Page</a></li>
+                <li> Chamber Of Commerce Wireframe: <a href="chamber/chamberWireFrame.html">Directory Wireframe</a></li>
                 <li> Week 05 Presentation: <a href="mediaQueryFolder/mediaQ.html">Media Query Example Page</a></li>
                 <li> Lesson 05: <a href="bom/bom.html">DOM Manipulation</a></li>
                 <li> Lesson 06: <a href="week6tutorial/start/index.html">Working with Responsive images</a></li>
