--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li> Lesson 07: <a href="lesson7/lazyload.html">Lazy Loading Example with IntersectionObserver </a></li>
                 <li> Lesson 08: <a href="lesson8/tablebuild.html">HTML Table Build</a></li>
                 <li> Lesson 09: <a href="lesson9/prophets.html">Prophets</a></li>
-                <li> Lesson 10: <a href="">Title</a></li>
+                <li> Lesson 10: <a href="lesson 10/weather-api.html">Weather API Test</a></li>
                 <li> Lesson 11: <a href="">Title</a></li>
             </ul>
         </div>
