added a text for required fields

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -97,7 +97,7 @@
                <!-- <h1>Chamber Membership Application</h1> -->
                <fieldset>
                    <legend>Applicant Information</legend>
-                   <!-- <div>Personal Information</div> -->
+                   <label class="required">*Required Field</label>
                    <label class="top">First Name*<br><input type="text" name="fname" required></label>
                    <label class="top">Last Name*<br><input type="text" name="lname" required></label>
                    <label class="top">Phone*<br><input type="tel" name="phone" required placeholder="1231231234"></label>
