contact page link added plus

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -79,7 +79,7 @@
                     <a class="active" href="#">Discover</a>
                     <a href="directory.html">Directory</a>
                     <a href="join.html">Join</a>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
 
                 </div>
                 
