--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -79,7 +79,7 @@
                     <a href="discover.html">Discover</a>
                     <a class="active" href="directory.html">Directory</a>
                     <a href="join.html">Join</a>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
 
                 </div>
                 
