--- a/chamber/join.html
+++ b/chamber/join.html
@@ -61,7 +61,7 @@
                     <a href="discover.html">Discover</a>
                     <a href="directory.html">Directory</a>
                     <a class="active" href="join.html">Join</a>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
 
                 </div>
                 
