--- a/wdd230finalproject/finalprojectdocument/wireSketches.html
+++ b/wdd230finalproject/finalprojectdocument/wireSketches.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family=Rubik&display=swap" rel="stylesheet">
 
-    <title>Bountiful Foods Planning Document Home Page</title>
+    <title>Bountiful Foods Planning Document Wire Sketches Page</title>
 </head>
 
 
